# traefik-k8s-operator

./: .gitignore  .spread-reuse.31415.yaml  .spread-reuse.34038.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  TODO  TROUBLESHOOTING.md  actions.yaml  artifacts.build.yaml  artifacts.yaml  charmcraft.yaml  concierge-juju3.yaml  concierge-juju4.yaml  concierge-s390x.yaml  concierge.yaml  config.yaml  foo.bndl  metadata.yaml  openstack-traefik.bundle  pyproject.toml  renovate.json  requirements-test.txt  requirements.txt  run_theatre.py  spread.yaml  test-2.yaml  test.sh  test.yaml  tox.ini
.github/: .jira_sync_config.yaml  CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  enhancement_proposal.yml
.github/workflows/: check_release_notes_artifact.yaml  ci.yaml  cla-check.yml  docs_rtd.yaml  integration-test-charm-ci.yaml  integration-test.yaml  issues.yaml  issues.yml  measure-deploy-time.yaml  measure-pr-deploy-time.yaml  promote.yaml  publish-charm-ci.yaml  publish.yaml  pull-request.yaml  pull-requests.yaml  quality-gates.yaml  release-edge.yaml  release.yaml  release_notes_automation.yaml  terraform.yaml  test_terraform_modules.yaml
.spread-run-gb2gip8e/: spread.yaml
.theatre/: deltas_template.py  loader.py  state.json
.theatre/scenes/: foo.json.theatre
doc/adr/: 2023-10-18 subdomain routing with cert per unit.md  README.md
docs/: .custom_wordlist.txt  Makefile  changelog.md  conf.py  index.md  requirements.txt
docs/_static/js/: overwrite_links.js
docs/explanation/: charm-architecture.md  index.md  security.md
docs/how-to/: contribute.md  contribute.rst  enable-basicauth.md  force-https-redirect.md  how-to-enable-basicauth.md  index.md  integrate.md  integrating.md  troubleshoot-gateway-address-unavailable.md  troubleshoot-reachability.md  troubleshooting-gateway-address-unavailable.md  troubleshooting-reachability.md  upgrade.md
docs/reference/: charm-architecture.md  cryptographic-documentation-for-cos-lite-charms.md  index.md  ingress-integration.md
docs/release-notes/: common.yaml  index.md
docs/release-notes/artifacts/: ISD-4508.yaml  pr0636.yaml  pr0637.yaml  pr0639.yaml  pr0645.yaml  pr0652.yaml  pr0653.yaml  pr0656.yaml  pr0657.yaml  pr0669.yaml  pr0673.yaml  pr0674.yaml  pr0675.yaml  pr0677.yaml  pr0678.yaml  pr0679.yaml  pr0680.yaml  pr0682.yaml  pr0685.yaml  pr0686.yaml  pr0689.yaml  pr0691.yaml  pr0694.yaml  pr0698.yaml  pr0701.yaml  pr0702.yaml  pr0705.yaml  pr0720.yaml  pr0726.yaml  test.yaml
docs/release-notes/template/: _change-artifact-template.yaml  _release-artifact-template.yaml  release-template.md.j2
docs/tutorial/: index.md  tls-termination-using-a-local-ca.md
docs/tutorials/: index.md  tls-termination-using-a-local-ca.md
lib/: .wokeignore
src/: branching_ops.py  charm.py  endpoint_deprecator.py  k8s_lb_manager.py  peer_storage.py  traefik.py  traefik_config.py  utils.py
src/grafana_dashboards/: traefik.json.tmpl
src/loki_alert_rules/: error_level_logs_found.rule
src/prometheus_alert_rules/: reload_failure.rule  unit_unavailable.rule
terraform/: .tflint.hcl  CONTRIBUTING.md  README.md  main.tf  outputs.tf  terraform.tf  terraform.tfvars  variables.tf  versions.tf
terraform/tests/: main.tftest.hcl
terraform/tests/setup/: main.tf
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  dns_adapter.py  helpers.py  test_basic_auth.py  test_charm.py  test_charm_health.py  test_charm_ipa.py  test_charm_ipu.py  test_charm_route.py  test_charm_tcp.py  test_compatibility.py  test_dynamic_configs.py  test_dynamic_configs_jubilant.py  test_forward_auth.py  test_forward_auth_all.py  test_https_multi_unit.py  test_pebble_restart_after_cert_relation_joined.py  test_receive_ca_cert_status.py  test_tcp_ipa_compatibility.py  test_tcp_ipu_compatibility.py  test_tls.py  test_tls_jubilant.py  test_tls_multi_unit_jubilant.py  test_traefik_deployed_after_metallb.py  test_traefik_deployed_before_metallb.py  test_upgrade.py  test_upstream_ingress.py  test_workload_tracing.py
tests/integration/ingress-requirer-mock/: metadata.yaml  requirements.txt
tests/interface/: conftest.py  test_ingress.py
tests/interfaces/: conftest.py  test_ingress.py  test_ingress_per_unit.py
tests/jubilant/: conftest.py  helper.py  test_tls_multi_unit.py
tests/manual/: README.md  bundle_1_http.yaml  bundle_2_https_fqdn.yaml  bundle_3_reverse_termination.yaml  bundle_4_tls_termination.yaml  bundle_5_tls_end_to_end.yaml
tests/scenario/: _utils.py  conftest.py  ipu.playbook  test_certificate_cleanup.py  test_certificate_transfer.py  test_charm_tracing.py  test_config_mgm.py  test_endpoint_deprecator.py  test_ingress_per_app.py  test_ingress_per_app_requirer.py  test_ingress_per_leader.py  test_ingress_per_unit.py  test_ingress_per_unit_provider.py  test_ingress_tls.py  test_ipa.py  test_lib_per_unit_provides_sequences.py  test_middlewares.py  test_peer_storage.py  test_remove.py  test_scheme.py  test_setup.py  test_status.py  test_tls_certificates.py  test_tracing_integration.py  test_traefik.py  test_traefik_route.py  test_workload_version.py  utils.py
tests/unit/: _utils.py  capture.py  conftest.py  test_ca_cert_on_upgrade.py  test_charm.py  test_config_mgm.py  test_databag_model.py  test_deep_merge.py  test_event_serializers.py  test_ingress_lib.py  test_ingress_per_app.py  test_ingress_per_unit.py  test_ingress_per_unit_provider.py  test_ingress_tls.py  test_ipa.py  test_kubernetes_service.py  test_lib_helpers.py  test_lib_per_app_provides.py  test_lib_per_app_requires.py  test_lib_per_unit_listen_to.py  test_lib_per_unit_provides.py  test_lib_per_unit_provides_sequences.py  test_lib_per_unit_requires.py  test_lib_provides.py  test_lib_requires.py  test_middlewares.py  test_pebble_connection.py  test_pebble_restart.py  test_refresh_certs.py  test_route.py  test_secret_store.py  test_setup.py  test_status.py  test_tls_certificates.py  test_tracing_integration.py  test_traefik_certificate_cleanup.py  test_upstream_ingress_strip.py  test_workload_version.py
(+141 files in other folders)
